--- a/74_visualization_tips.ipynb
+++ b/74_visualization_tips.ipynb
@@ -1,11 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 77,
+   "cell_type": "markdown",
    "id": "96a8c2c5",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 시각화 기법"
    ]
@@ -15,7 +13,9 @@
    "id": "0fac360b",
    "metadata": {},
    "source": [
-    "## X축 tick label\n",
+    "## X축 tick label 다루기\n",
+    "\n",
+    "시계열 그래프는 x축 시간을 설정 > 변화하는 변수를 설정하는 차트\n",
     "\n",
     "- 시계열 그래프의 x축 라벨 설정\n",
     "- 데이터셋 : ABNB_stock.csv "
@@ -2912,7 +2912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "9fc7a156",
    "metadata": {},
    "outputs": [
@@ -2934,10 +2934,10 @@
     "sns.lineplot(data=df_abnb, x='Date', y='Close', ax=ax, color='red')\n",
     "sns.lineplot(data=df_abnb, x='Date', y='Volume', ax=ax2, color= 'green')\n",
     "\n",
-    "# 첫번째 그래프 (왼쪽) y축\n",
+    "#왼쪽y축 정보 설정\n",
     "ax.tick_params(axis='y', labelcolor='red')\n",
-    "ax.yaxis.label.set_color('red')\n",
-    "# 두번째 그래프 (오른쪽) y축 \n",
+    "ax.yaxis.label.set_color('red') \n",
+    "#오른쪽y축\n",
     "ax2.tick_params(axis='y', labelcolor='green')\n",
     "ax2.yaxis.label.set_color('green')"
    ]
@@ -5074,11 +5074,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 93,
+   "cell_type": "markdown",
    "id": "493868f9",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# plotly.graph_object 로 그리기\n",
     "# plotly.express 로 그리기"
@@ -7619,7 +7617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 240,
    "id": "053e9660",
    "metadata": {},
    "outputs": [
@@ -7986,15 +7984,12 @@
        "layout": {
         "height": 600,
         "legend": {
-         "orientation": "v",
          "title": {
-          "text": "차량 종류"
+          "text": "Vehicle Class"
          },
          "tracegroupgap": 0,
-         "x": 1.05,
-         "xanchor": "left",
-         "y": 0.95,
-         "yanchor": "top"
+         "x": 1.2,
+         "y": 1
         },
         "margin": {
          "t": 60
@@ -8814,17 +8809,8 @@
     "    width=900,\n",
     "    height=600\n",
     ")\n",
-    "# 범례 위치 및 기타 속성 업데이트\n",
-    "fig.update_layout(\n",
-    "    legend_title_text='차량 종류', # 범례 제목 설정\n",
-    "    legend=dict(\n",
-    "        x=1.05,          # x축 위치 (0=왼쪽, 1=오른쪽)\n",
-    "        y=0.95,          # y축 위치 (0=아래, 1=위)\n",
-    "        xanchor='left',  # x 위치의 기준점 ('left', 'center', 'right')\n",
-    "        yanchor='top',   # y 위치의 기준점 ('top', 'middle', 'bottom')\n",
-    "        orientation='v'  # 범례 방향 ('v': 수직, 'h': 수평)\n",
-    "    )\n",
-    ")\n",
+    "# 범례\n",
+    "fig.update_layout(legend_x=1.2, legend_y=1)\n",
     "\n",
     "fig.show() # Plotly는 .show()로 차트를 표시합니다."
    ]
@@ -9987,7 +9973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 241,
    "id": "4dd27ab9",
    "metadata": {},
    "outputs": [
@@ -10961,7 +10947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 242,
    "id": "fa8b2329",
    "metadata": {},
    "outputs": [
@@ -15036,14 +15022,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 243,
    "id": "4ca6fc55",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>inspection_step</th>\n",
+       "      <th>value</th>\n",
+       "      <th>upper_spec</th>\n",
+       "      <th>target</th>\n",
+       "      <th>lower_spec</th>\n",
+       "      <th>spec_out</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>A</td>\n",
+       "      <td>21.2</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>21.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>A</td>\n",
+       "      <td>21.7</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>21.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>A</td>\n",
+       "      <td>21.4</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>21.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>A</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>21.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-01-05</td>\n",
+       "      <td>A</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>21.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date inspection_step  value  upper_spec  target  lower_spec  spec_out\n",
+       "0 2022-01-01               A   21.2        22.0    21.3        20.6     False\n",
+       "1 2022-01-02               A   21.7        22.0    21.3        20.6     False\n",
+       "2 2022-01-03               A   21.4        22.0    21.3        20.6     False\n",
+       "3 2022-01-04               A   21.5        22.0    21.3        20.6     False\n",
+       "4 2022-01-05               A   21.5        22.0    21.3        20.6     False"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 특정 조건에 해당하는 값 찾기\n",
     "# 각 공정별로 관리 스펙에서 벗어난 자재가 있는 그래프 테두리 강조\n",
-    "df_ins['spec_out'] = (df_ins['value'] > df_ins['upper_spec']) | (df_ins['value'] < df_ins['lower_spec'])"
+    "df_ins['spec_out'] = (df_ins['value'] > df_ins['upper_spec']) | (df_ins['value'] < df_ins['lower_spec'])\n",
+    "df_ins.head()"
    ]
   },
   {
